Bug 1288194 - Part 1: Implement PathBuilderRecording::Arc correctly. r=bas, a=ritu

MozReview-Commit-ID: Iz7Io8IxHvR